gogs-app.yml
apiVersion: v1
kind: Service
metadata:
  name: gogs-app
  namespace: gogs
  labels:
    app: gogs-app
spec:
  ports:
  - name: ssh
    protocol: TCP
    port: 22
    targetPort: 22
    nodePort: 30022
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30009
  selector:
    app: gogs-app
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: gogs-app
  name: gogs-app
  namespace: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs-app
  serviceName: gogs-app
  template:
    metadata:
      labels:
        app: gogs-app
    spec:
      containers:
      - image: gogs/gogs
        imagePullPolicy: IfNotPresent
        name: gogs-app
        volumeMounts:
        - mountPath: "/data"
          name: persistentdata
        resources: {}
        ports:
          - containerPort: 3000
            name: web
            protocol: TCP
          - containerPort: 22
            name: ssh
            protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: persistentdata
          persistentVolumeClaim:
            claimName: gogs-repos-pvc
