gogs-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs-ingress
  namespace: gogs
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
  - hosts:
    - gogs.rodeo.io
  rules:
  - host: gogs.rodeo.io 
    http:
      paths:
      - path: /
        backend:
          serviceName: gogs-app
          servicePort: 3000
